[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/bg/Space_Stars2.png" type="Texture" id=1]
[ext_resource path="res://src/spaceship/Spaceship.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/level/Overworld.gd" type="Script" id=4]
[ext_resource path="res://src/audioplayer/AudioStreamPlayer.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/userinterface/healthbar/HealthBar.tscn" type="PackedScene" id=9]

[node name="Overworld" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ 384.077, 552.161 ],
"_edit_vertical_guides_": [ 435.739, 600.896 ]
}

[node name="AudioStreamPlayer" parent="." instance=ExtResource( 7 )]
pause_mode = 2
volume_db = -6.021
music_library = 3

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="ParallaxBackground" type="ParallaxBackground" parent="BackgroundLayer"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="BackgroundLayer/ParallaxBackground"]
motion_mirroring = Vector2( 64, 64 )

[node name="TextureRect" type="TextureRect" parent="BackgroundLayer/ParallaxBackground/ParallaxLayer"]
margin_right = 1600.0
margin_bottom = 900.0
texture = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InterfaceLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="HealthBar" parent="InterfaceLayer" instance=ExtResource( 9 )]

[node name="debugLabel" type="Label" parent="InterfaceLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -25.0
margin_bottom = -25.0
text = "Test"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjectContainer" type="Node2D" parent="."]

[node name="Spaceship" parent="." instance=ExtResource( 3 )]
position = Vector2( 800, 450 )
scale = Vector2( 0.15, 0.15 )

[node name="Camera2D" parent="Spaceship" index="7"]
limit_left = -1000
limit_top = -1000
limit_right = 1000
limit_bottom = 1000

[connection signal="health_changed" from="Spaceship/HealthComponent" to="InterfaceLayer/HealthBar" method="_on_health_changed"]
[connection signal="maxhealth_increased" from="Spaceship/HealthComponent" to="InterfaceLayer/HealthBar" method="_on_maxhealth_increased"]

[editable path="InterfaceLayer/HealthBar"]
[editable path="Spaceship"]
[editable path="Spaceship/HealthComponent"]
